issues with start button taking out the welcome box class

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
 
         <!-- WELCOME AREA -- when the page loads this is what will display to the user first - once they start the game this needs to disapear as it is no longer useful-->
-        <div class="row welcome-box">
+        <div class="welcome-box row">
             <div class="col-1"></div>
             <div class="col-10">
                 <div id="welcome">
