--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
         </header>
 
         <!-- WELCOME AREA -- when the page loads this is what will display to the user first - once they start the game this needs to disapear as it is no longer useful-->
-        <div class="welcome-box row">
-            <div class="col-1"></div>
-            <div class="col-10">
-                <div id="welcome">
+        <div id="welcome-box">
+            <div class="row">
+                <div class="col-1"></div>
+                <div class="col-10">
                     <h1>Welcome to the Code Quiz!</h1>
                     <p id="para">Try your best to answer all of the questions correctly! The clock will begin as soon as
                         you hit the start button. Good luck!</p>
                     <button id="start-btn">Start Quiz</button>
                 </div>
+                <div class="col-1"></div>
             </div>
-            <div class="col-1"></div>
         </div>
 
+
         <!--QUESTION AREA- this is going to first fill with the first question in the array when START QUIZ button is clicked and then have each subsequent question added upon selecting an answer-->
-        <div id="q-box" class="d-none"> <!--this d-none tag keeps everything hidden but still existent so that you can call it out with JS when the sequence is ready-->
+        <div id="q-box" class="d-none">
+            <!--this d-none tag keeps everything hidden but still existent so that you can call it out with JS when the sequence is ready-->
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
@@ -93,10 +95,8 @@
     </div>
 
 
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script href="script.js"></script>
 </body>
 
