--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
         <!--QUESTION AREA- this is going to first fill with the first question in the array when START QUIZ button is clicked and then have each subsequent question added upon selecting an answer-->
-        <div id="q-box" class="d-none">
+        <div id="q-box" >
             <!--this d-none tag keeps everything hidden but still existent so that you can call it out with JS when the sequence is ready-->
             <div class="row">
                 <div class="col-1"></div>
@@ -97,7 +97,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script href="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
