--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="###">Leader Board</a>
                 </div>
                 <div class="col-8"></div>
-                <div class="col-2">
+                <div class="col-2" id="timer">
                     Timer: 75
                 </div>
             </div>
