starting to figure out how to populate the questions as they come

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
         <!-- End of quiz message -->
-        <div id="endOfQuiz" class="d-none mt-4">
+        <div id="endOfQuiz">
             <div class="alert alert-primary" role="alert">
                 <p>Thank you for playing!</p>
                 <h2>Your final score is: <span id="finalScore">0</span> points!</h2>
